[기능개선][유저] 임시 파일저장 경로 로직 수정